<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:textColor="#E2FCE7"
        android:textSize="35sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">

        <TextView
            style="@style/CalledStyle"
            android:text="@string/first_pair_called" />

        <TextView
            style="@style/ClassStyle"
            android:layout_width="wrap_content"
            android:text="" />

        <View
            android:id="@+id/line_thursday_1"
            style="@style/LineStyle" />

        <TextView
            style="@style/CalledStyle"
            android:text="@string/second_pair_called" />

        <TextView
            style="@style/ClassStyle"
            android:text="@string/thursday_2" />

        <View
            android:id="@+id/line_thursday_2"
            style="@style/LineStyle" />

        <TextView
            style="@style/CalledStyle"
            android:text="@string/third_pair_called" />

        <TextView
            style="@style/ClassStyle"
            android:text="@string/thursday_3" />

        <View
            android:id="@+id/line_thursday_3"
            style="@style/LineStyle" />

        <TextView
            style="@style/CalledStyle"
            android:text="@string/fourth_pair_called" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ClassStyle"
                android:text="@string/thursday_4_1" />

            <View
                android:id="@+id/line_thursday_4"
                style="@style/LineStyleWeek" />

            <TextView
                style="@style/ClassStyle"
                android:text="@string/thursday_4_2" />
        </LinearLayout>

        <View
            android:id="@+id/line_thursday_5"
            style="@style/LineStyle" />

        <TextView
            style="@style/CalledStyle"
            android:text="@string/fifth_pair_called" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ClassStyle"
                android:text="@string/thursday_5_1" />

            <View
                android:id="@+id/line_thursday_6"
                style="@style/LineStyleWeek" />

            <TextView
                style="@style/ClassStyle"
                android:text="@string/thursday_5_2" />
        </LinearLayout>

        <View
            android:id="@+id/line_thursday_7"
            style="@style/LineStyle" />

        <TextView
            style="@style/CalledStyle"
            android:text="@string/sixth_pair_called" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ClassStyle"
                android:text="@string/thursday_5_1" />

            <View
                android:id="@+id/line_thursday_8"
                style="@style/LineStyleWeek" />

            <TextView
                style="@style/ClassStyle"
                android:text="@string/thursday_5_2" />
        </LinearLayout>

        <View
            android:id="@+id/line_thursday_9"
            style="@style/LineStyle" />
    </GridLayout>
</LinearLayout>