<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textSize="35sp"
            android:textColor="#E2FCE7" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal">
            <TextView
                android:text="@string/first_pair_called"
                style="@style/CalledStyle" />
            <TextView
                style="@style/ClassStyle"
                android:layout_width="wrap_content"
                android:text="" />
            <View style="@style/LineStyle"
                android:id="@+id/bline_friday_1"/>
            <TextView
                android:text="@string/second_pair_called"
                style="@style/CalledStyle"/>
            <TextView
                style="@style/ClassStyle"
                android:text="" />
            <View style="@style/LineStyle"
                android:id="@+id/bline_friday_2"/>
            <TextView
                android:text="@string/third_pair_called"
                style="@style/CalledStyle"/>
            <TextView
                style="@style/ClassStyle"
                android:text="@string/friday_3" />
            <View style="@style/LineStyle"
                android:id="@+id/bline_friday_3"/>
            <TextView
                android:text="@string/fourth_pair_called"
                style="@style/CalledStyle"/>
            <TextView
                style="@style/ClassStyle"
                android:text="@string/friday_4" />
            <View style="@style/LineStyle"
                android:id="@+id/bline_friday_4"/>
            <TextView
                android:text="@string/fifth_pair_called"
                style="@style/CalledStyle"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/ClassStyle"
                    android:text="@string/friday_5" />
                <View style="@style/LineStyleWeek"
                    android:id="@+id/sline_friday_1"/>
                <TextView
                    style="@style/ClassStyle"
                    android:text="@string/friday_5" />
            </LinearLayout>
            <View style="@style/LineStyle"
                android:id="@+id/bline_friday_5"/>
            <TextView
                android:text="@string/sixth_pair_called"
                style="@style/CalledStyle"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/ClassStyle"
                    android:text="@string/friday_5" />
                <View style="@style/LineStyleWeek"
                    android:id="@+id/sline_friday_2"/>
                <TextView
                    style="@style/ClassStyle"
                    android:text="@string/friday_5" />
            </LinearLayout>
            <View style="@style/LineStyle"
                android:id="@+id/bline_friday_6"/>
        </GridLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">
        <Button style="@style/BackButton"
            android:id="@+id/button10"/>
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>