<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <ImageView
        android:contentDescription="@string/change_theme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/image_settings"
        android:src="@drawable/storm_black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:text="@string/change_theme"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/theme1"
                android:contentDescription="@string/theme_alina"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_columnWeight="1"
                android:onClick="updateAlina"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:adjustViewBounds="true"
                android:src="@drawable/alina_theme"/>
            <ImageView
                android:id="@+id/theme2"
                android:contentDescription="@string/theme_loli"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_columnWeight="1"
                android:onClick="updateLoli"
                android:src="@drawable/loli_theme"/>
            <ImageView
                android:id="@+id/theme3"
                android:contentDescription="@string/theme_storm"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_columnWeight="1"
                android:onClick="updateElectricity"
                android:src="@drawable/storm_theme"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:text="@string/theme_alina"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:text="@string/theme_loli"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:text="@string/theme_storm"/>
            <ImageView
                android:id="@+id/theme4"
                android:contentDescription="@string/theme_noct"
                android:layout_marginTop="8dp"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_columnWeight="1"
                android:onClick="updateIamgey"
                android:src="@drawable/noct_theme"/>
            <ImageView
                android:id="@+id/theme5"
                android:contentDescription="@string/theme_sasha"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_columnWeight="1"
                android:onClick="updatePornhub"
                android:src="@drawable/sasha_theme"/>
            <ImageView
                android:id="@+id/theme6"
                android:contentDescription="@string/theme_satanism"
                android:layout_height="200dp"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_columnWeight="1"
                android:onClick="updateSatanism"
                android:src="@drawable/satanism_theme"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff"
                android:text="@string/theme_noct"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:text="@string/theme_sasha"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:text="@string/theme_satanism"/>
        </GridLayout>
        </LinearLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creators"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"/>
        <Button style="@style/BackButton"
            android:onClick="backDay"
            android:layout_gravity="end"
            android:id="@+id/button_settings" />
            </RelativeLayout>
</RelativeLayout>
</RelativeLayout>